Fix post content shadow not visible

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -638,7 +638,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
     display: block;
     width: 20px;
     height: 200px;
-    background: rgba(39,44,49,0.15);
+    background: rgba(0, 0, 0, 0.6);
     filter: blur(5px);
     transform: rotate(-5deg);
 }
@@ -652,7 +652,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
     display: block;
     width: 20px;
     height: 200px;
-    background: rgba(39,44,49,0.15);
+    background: rgba(0, 0, 0, 0.6);
     filter: blur(5px);
     transform: rotate(5deg);
 }
